--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,12 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
-    "angular2-mdl": "^2.4.1",
+    "angular2-mdl": "2.4.1",
     "core-js": "^2.4.1",
+    "primeng": "^1.0.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23",
-    "angular2-mdl": "2.4.1"
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
